# barclays-hackerarth

./: package-lock.json  pyproject.toml
app/: item_data.txt  main.py  package-lock.json  package.json  store_data.txt
app/core/: config.py
app/data/: items.py  store.py
app/helpers/: preprocessing.py
app/models/: api.py
front-end/: package-lock.json  package.json
front-end/src/: index.js
