[tool.poetry]
name = "barclays"
version = "0.1.0"
description = "API backend for barclays"
authors = ["Santosh"]

[tool.poetry.dependencies]
python = "3.9.0"
fastapi = "^0.78.0"
pandas = "^1.4.3"
uvicorn = "^0.18.2"
geopy = "^2.2.0"
PyJWT = "^2.4.0"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
